--- a/libft/Makefile
+++ b/libft/Makefile
@@ -8,7 +8,7 @@ SRCS =	ft_split.c \
 		ft_strjoin.c \
 		ft_strlcat.c \
 		ft_putstr_fd.c \
-		ft_itoa.c
+		ft_itoa.c ft_strncmp.c
 
 
 OBJS = $(SRCS:.c=.o)
